# wireguard

./: .gitignore  .gitmodules  CMakeLists.txt
include/: wireguard.hpp
src/: wireguard.cpp
